--- a/build.gradle
+++ b/build.gradle
@@ -95,7 +95,7 @@ sonarqube {
   properties {
     property "sonar.projectName", "Reform :: payment-jobs"
     property "sonar.projectKey", "uk.gov.hmcts.reform:payment-jobs"
-    property "sonar.coverage.exclusions", "**/JobProcessorConfiguration*,**JobProcessorApplication*"
+    property "sonar.coverage.exclusions", "**/JobProcessorConfiguration*,**JobProcessorApplication*,**/JobProcessorRunner*,**/RefundNotificationUpdateProcessor*,**/StatusUpdateProcessor*,**/UnprocessedPaymentUpdateProcessor*"
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.outputLocation}"
   }
 }
